--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,8 @@
   "require-dev": {
     "phalcon/devtools": "^3.2",
     "phalcon/ide-stubs": "*"
+  },
+  "require": {
+    "phalcon/incubator": "^3.3"
   }
 }
