--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,13 +105,14 @@ services:
       - .:/project
       - ./conf/php/cli.ini:/etc/php/7.0/cli/conf.d/99-custom.ini
       - ./conf/php/fpm.ini:/etc/php/7.0/fpm/conf.d/99-custom.ini
-#    depends_on:
+    depends_on:
 #      - mysql
 #      - queue
 #      - redis
 #      - memcached
 #      - elasticsearch
 #      - postgres
+       - mongo
     env_file:
       - variables.env
 
